--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <meta name="color-scheme" content="light dark">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
+    <link 
+      rel="preload" 
+      href="/fonts/LufgaRegular.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin
+    >
+    <link 
+      rel="preload" 
+      href="/fonts/LufgaMedium.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin
+    >
+    <link 
+      rel="preload" 
+      href="/fonts/LufgaBold.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin
+    >
+    <link 
+      rel="preload" 
+      href="/fonts/Satoshi-Regular.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin
+    >
+    <link 
+      rel="preload" 
+      href="/fonts/Satoshi-Medium.woff2" 
+      as="font" 
+      type="font/woff2" 
+      crossorigin
+    >
   </head>
   <body>
     <div id="root"></div>
