Update font preloading and remove obsolete font files: Changed font links in index.html and fonts.css to use .woff format instead of .woff2 for improved compatibility. Deleted unused .woff font files from the lufga and satoshi directories to clean up the project and reduce unnecessary assets.

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
     <link 
       rel="preload" 
-      href="/fonts/LufgaRegular.woff2" 
+      href="/fonts/LufgaRegular.woff" 
       as="font" 
-      type="font/woff2" 
+      type="font/woff" 
       crossorigin
     >
     <link 
       rel="preload" 
-      href="/fonts/LufgaMedium.woff2" 
+      href="/fonts/LufgaMedium.woff" 
       as="font" 
-      type="font/woff2" 
+      type="font/woff" 
       crossorigin
     >
     <link 
       rel="preload" 
-      href="/fonts/LufgaBold.woff2" 
+      href="/fonts/LufgaBold.woff" 
       as="font" 
-      type="font/woff2" 
+      type="font/woff" 
       crossorigin
     >
     <link 
       rel="preload" 
-      href="/fonts/Satoshi-Regular.woff2" 
+      href="/fonts/Satoshi-Regular.woff" 
       as="font" 
-      type="font/woff2" 
+      type="font/woff" 
       crossorigin
     >
     <link 
       rel="preload" 
-      href="/fonts/Satoshi-Medium.woff2" 
+      href="/fonts/Satoshi-Medium.woff" 
       as="font" 
-      type="font/woff2" 
+      type="font/woff" 
       crossorigin
     >
   </head>
